--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "autoload": {
         "psr-0": {
             "Service\\": "src/",
-            "Exceptions\\": "src/"
+            "Exceptions\\": "src/",
+            "Misc\\": "src/"
         }
     }   
 }
